--- a/rapports/diagramme des classes.tex
+++ b/rapports/diagramme des classes.tex
@@ -45,9 +45,7 @@
 \draw[dashed,-latex] (Proof) --node[right, midway]{utilise} ({CardList[list]});
 
 \begin{class}[text width=7cm]{Deck[list]}{10,0}
-\attribute{NUMBER : dict}
 \operation{\_\_init\_\_()}
-\operation{names() -> dict}
 \operation{draw(number : int) -> list of Card}
 \operation{append(card : Card)}
 \operation{is\_finished() -> boolean}
@@ -55,7 +53,8 @@
 
 \draw[dashed,-latex] ({Deck[list]}) --node[above, midway]{utilise} (Card);
 
-\begin{class}[text width=8cm]{ErgoGuiIntro[Toplevel]}{10,-19}%{31,0}
+\begin{class}[text width=8cm]{ErgoGuiIntro[Toplevel]}{10,-18}
+\attribute{LETWAY : list}
 \attribute{flag : int}
 \attribute{pause : int}
 \attribute{can : tk.Canvas}
@@ -70,7 +69,7 @@
 \operation{destroy()}
 \end{class}
 
-\begin{class}[text width=10cm]{ErgoCanvas[Canvas]}{21,0}
+\begin{class}[text width=10cm]{ErgoCanvas[Canvas]}{20.3,-15.5}
 \attribute{height : int}
 \attribute{width : int}
 \attribute{photos : dict}
@@ -78,6 +77,7 @@
 \attribute{selected\_card : Card}
 \attribute{pile : list}
 \attribute{names : list}
+\attribute{scores : list}
 \operation{\_\_init\_\_(*args, **kwargs)}
 \operation{display\_current\_player(num\_player : int)}
 \operation{affiche\_cards(loc : str, card\_list : list of Card, row : int)}
@@ -90,7 +90,7 @@
 \operation{switch(event : tk.Event)}
 \end{class}
 
-\begin{class}[text width=9cm]{ErgoGui[Tk]}{10,-5}
+\begin{class}[text width=9cm]{Main[Tk]}{10,-4}
 \attribute{can : ErgoCanvas}
 \attribute{barre\_menu : tk.Menu}
 \attribute{proof : Proof}
@@ -98,9 +98,7 @@
 \attribute{demo : Demonstration}
 \attribute{ordi\_player : list}
 \attribute{photos : dict of tk.PhotoImage}
-\attribute{cards : list of list of Card}
 \attribute{hands : list of list of Card}
-\attribute{pile : list of Card}
 \attribute{num\_player : int}
 \attribute{nb\_player : int}
 \attribute{player\_names : list}
@@ -116,13 +114,13 @@
 \operation{quitter()}
 \end{class}
 
-\begin{class}[text width=9cm]{ForceBrute}{20,-14}
+\begin{class}[text width=9cm]{ForceBrute}{20.5,-12.5}
 \operation{to\_bin(n : int) -> list}
 \operation{evalue(interpretation : list) -> bool}
 \operation{conclusion() -> list}
 \end{class}
 
-\begin{class}[text width=9cm]{DPLL}{30.5,-14}
+\begin{class}[text width=9cm]{DPLL}{30.5,-12.5}
 \attribute{fcn : FCN}
 \attribute{clause\_list : list}
 \operation{propagation(clause\_list : list, lit : int)}
@@ -131,7 +129,7 @@
 \end{class}
 
 
-\begin{class}[text width=9cm]{FCN}{30.5,-18}
+\begin{class}[text width=9cm]{FCN}{30.5,-17.5}
 \attribute{proof : Proof}
 \attribute{fcn\_npi : list}
 \attribute{clause\_list : list}
@@ -147,19 +145,35 @@
 \operation{to\_clause\_list() -> list}
 \end{class}
 
-\begin{class}[text width=9cm]{Demonstration}{21,-10}
+\begin{class}[text width=9cm]{Demonstration}{25,-10}
 \attribute{proof : Proof}
 \operation{conclusion() : list ou NoneType}
 \end{class}
 
-\draw[dashed,-latex] (ErgoGui[Tk]) --node[right, midway]{utilise} ({Deck[list]});
-\draw[dashed,-latex] (ErgoGui[Tk]) --node[above, midway]{utilise} (Proof);
-\draw[dashed,-latex] (ErgoGui[Tk]) --node[above, midway]{utilise} (ErgoCanvas[Canvas]);
-\draw[dashed,-latex] (ErgoGui[Tk]) --node[above, midway]{utilise} (Demonstration);
-\draw[dashed,-latex] (ErgoGui[Tk]) --node[above, midway]{utilise} (ErgoGuiIntro[Toplevel]);
+\begin{class}[text width=5cm]{Ordi}{19,-5}
+\attribute{\_proof : Proof}
+\attribute{\_hand : list of Card}
+\attribute{\_coups : list}
+\operation{\_\_parenthèses()}
+\operation{coups\_possibles() -> list}
+\operation{joue() -> tuple}
+\end{class}
 
-\draw[-,-latex] (DPLL) --node[above, midway]{implémente} (Demonstration);
-\draw[-,-latex] (ForceBrute) --node[above, midway]{implémente} (Demonstration);
+\begin{class}[text width=5cm]{OrdiRandom}{19,-2}
+\operation{joue() -> tuple}
+\end{class}
+
+\draw[dashed,-latex] (Main[Tk]) --node[right, midway]{utilise} ({Deck[list]});
+\draw[dashed,-latex] (Main[Tk]) --node[above, midway]{utilise} (Proof);
+\draw[dashed,-latex] (Main[Tk]) --node[right, midway]{utilise} (ErgoCanvas[Canvas]);
+\draw[dashed,-latex] (Main[Tk]) --node[above, midway]{utilise} (Demonstration);
+\draw[dashed,-latex] (Main[Tk]) --node[left, midway]{utilise} (ErgoGuiIntro[Toplevel]);
+\draw[dashed,-latex] (Main[Tk]) --node[above, midway]{utilise} (Ordi);
+
+\draw[-,-latex] (DPLL) --node[right, midway]{implémente} (Demonstration);
+\draw[-,-latex] (ForceBrute) --node[left, midway]{implémente} (Demonstration);
+\draw[-,-latex] (OrdiRandom) --node[left, midway]{implémente} (Ordi);
+
 \draw[dashed,-latex] (DPLL) --node[left, midway]{utilise} (FCN);
 
 
