--- a/rapports/rapport.tex
+++ b/rapports/rapport.tex
@@ -64,7 +64,7 @@ Le but est de réaliser une implémentation en Python de ce jeu. Pour cela, plus
 \item analyser une ligne de la preuve pour vérifier qu'elle est syntaxiquement correcte~;
 \item coder une ligne syntaxiquement correcte sous une forme exploitable (arbre, forme conjonctive normale, forme disjonctive normale, \dots ?)~;
 \item déterminer à partir du codage des 4 lignes quelles variables sont prouvées ou s'il y a une contradiction~;
-\item réaliser une interface graphique (à priori avec tkinter)~;
+\item réaliser une interface graphique avec tkinter~;
 \item implémenter une fonction pour pouvoir jouer contre l'ordinateur.
 \end{itemize}
 
@@ -89,35 +89,49 @@ Après quelques discutions, le travail s'est assez naturellement réparti. Emman
 
 \section{Solutions techniques}
 
-Nous utilisons Tkinter pour l'interface graphique. Avec en complément messagebox.
+\subsection{Les modules concernant les cartes}
 
-Il a fallu créer les images des cartes, en choisissant une dimension pratique pour la gestion du placement de cartes. La première dimension était trop importante et ne permettait pas de faire des lignes de preuve suffisamment longues. Il a juste fallu redimensionner nos images, car nous avions prévus des constantes (CARD\_WIDTH et CARD\_HEIGHT) en cas de changement.
+Quatre modules sont destinés à gérer les cartes :
 
-Nous avons choisi de créer nos images au format gif. Une carte particulière, "back" associée à l'image carteDos.gif permet d'afficher les mains des autres joueurs face cachée.
+\begin{description}
+\item[Card] définit les différentes cartes;
+\item[CardList] gère les listes de cartes et la notation polonaise inversée associée;
+\item[Proof] gère les quatre prémisses;
+\item[Deck] gère le paquet de cartes.
+\end{description}
 
-Les cartes sont gérées à l'aide du dictionnaire IMAGE.Nous avons eu des problèmes au début avec nos images, Tkinter ne reconnaissant pas celles-ci.
+\subsection{Les modules concernant les démonstrations}
 
-En cas de sortie prématurée du programme, il arrive (principalement avec Pyscripter) que nous ayons encore des soucis : tkinter ne retrouve plus les images à afficher. Relancer Pyscripter permet de palier au problème. Nous aimerions comprendre exactement les raisons de ce bug.
+L'analyse de la preuve se fait par la classe abstraite \texttt{Demonstration}. Cette classe est concrétisée par les deux classes \texttt{ForceBrute}, qui cherche à déterminer les \og variables prouvées \fg par force brute, et \texttt{DPLL} qui utilise l'algorithme de Davis-Putnam-Logemann-Loveland. Cette dernière commence par faire appel à la classe \texttt{FCN} pour obtenir l'écriture en forme conjonctive normale de la preuve.
+
+
+\subsection{L'interface graphique}
+
+Nous utilisons tkinter pour l'interface graphique. Avec en complément messagebox.
+
+Il a fallu créer les images des cartes, en choisissant une dimension pratique pour la gestion du placement de cartes. La première dimension était trop importante et ne permettait pas de faire des lignes de preuve suffisamment longues. Les constantes correspondant à la taille des différentes cartes, à l'épaisseur des traits, au nom ou au nombre de chaque cartes ont été 
+
+Nous avions initialement choisi de créer nos images au format gif, mais à l'usage le format png s'est révélé plus facile à manipuler. L'image carteBack permet d'afficher les mains des autres joueurs face cachée.
 
 \smallskip
-
-La classe ErgoGui gère le jeu en lui même et la gestion du Canvas est déléguée à la classe ErgoCanvas. 
-
-La gestion du jeu se fait à la souris. On peut attraper (bouton gauche), déplacer (bouton gauche maintenu) et déposer (bouton gauche relâché) la carte à l'aide des méthodes select(), move() et drop().
-
-Le bouton droit permet, associé à la méthode switch, si la carte est une parenthèse, de la retourner.
-
-Il y a eu un problème de définition du deck : quand nous avons réalisé la méthode permettant de retourner les parenthèses, la modification s'appliquait à toutes les parenthèses du même type. Une liste en compréhension a résolu le problème.
-
-Les règles du jeux sont dans un fichier texte. Lors de l'appel de la méthode nous faisons une lecture du fichier puis un affichage dans une fenêtre messagebox.
-
-Avec les nouvelles fonctionnalités qui permettent de choisir soit le mode multijoueur ou de jouer contre l'ordinateur une nouvelle classe ErgoGuiIntro a été créée. 
+Avec les nouvelles fonctionnalités qui permettent de choisir soit le mode multijoueur ou de jouer contre l'ordinateur une nouvelle classe \texttt{ErgoIntro} a été créée. 
 
 Elle permet de créer une fenêtre d’accueil avec une animation au démarrage. La méthode animate\_letter permet de simuler une distribution des cartes suivant la forme des lettres du nom du jeu ERGO.
 
 Deux boutons permettent d'accéder au jeu dans le mode choisi.
 
-  
+\subsection{La classe Main}
+
+La classe \texttt{Main} gère le jeu en lui même et la gestion du \texttt{Canvas} est déléguée à la classe \texttt{ErgoCanvas}. 
+
+La gestion du jeu se fait à la souris. On peut attraper (bouton gauche), déplacer (bouton gauche maintenu) et déposer (bouton gauche relâché) la carte à l'aide des méthodes \texttt{select}, \texttt{move} et \texttt{drop}.
+
+Le bouton droit permet, associé à la méthode \texttt{switch}, si la carte est une parenthèse, de la retourner.
+
+De plus, il s'est avéré qu'il fallait autoriser l'annulation d'une carte effacée avec \texttt{Tabula Rasa} sous peine de bloquer le joueur. C'est possible avec la touche ESC.
+
+
+Les règles du jeu sont dans un fichier texte. Lors de l'appel de la méthode nous faisons une lecture du fichier puis un affichage dans une fenêtre messagebox.
 
 
 \section{Algorithmes utilisés}
@@ -160,7 +174,7 @@ Créer une \texttt{pile} vide\;
 
 \subsubsection{Force brute}
 
-Ici, mon idée a été d'attaquer le problème en force brute : tester tous les modèles possible (comme il y a 4 variables, il y a seulement $2^4=16$ possibilités) et pour chacun évaluer la preuve. Si le résultat est Vrai, c'est que le modèle est admissible et je le mémorise. Ensuite, je regarde pour chaque variable si elle a toujours la même valeur (Vrai ou Faux) dans tous les modèles admissibles. Si c'est la cas, la variable est prouvée ou niée.
+Ici, mon idée a été d'attaquer le problème en force brute : tester tous les modèles possible (comme il y a 4 variables, il y a seulement $2^4=16$ possibilités) et pour chacun évaluer la preuve. Si le résultat est Vrai, c'est que le modèle est admissible et on le mémorise. Ensuite, on regarde pour chaque variable si elle a toujours la même valeur (Vrai ou Faux) dans tous les modèles admissibles. Si c'est la cas, la variable est prouvée ou niée.
 
 \medskip
 D'après le cours qu'on a eu pour l'instant sur la logique avec Line Jakubie-Jamet, cette méthode constitue une preuve sémantique, mais c'est équivalent à une preuve syntaxique.
@@ -232,22 +246,36 @@ Même si l'algorithme précédent marche bien dans le contexte qui nous intéres
 
 \subsection{Jeu de l'ordinateur}
 
-Une première étape consiste, si on a au moins deux parenthèses en main, à se débrouiller pour en avoir au moins une ouvrante et une fermante.
+Le gestion des coups possibles se fait dans la classe \texttt{Ordi}. Cette classe contient une méthode abstraite \texttt{joue} en vue de tester différentes idées concernant les deux cartes à jouer.
 
-Ensuite, on détermine l'ensemble des coups possibles en essayant de poser chacune des cartes de la main à un endroit de la preuve.
+Une première étape consiste, si on a au moins deux parenthèses en main, à se débrouiller pour en avoir au moins une ouvrante et une fermante. Pour simplifier la gestion des cartes Fallacy et Justification, une deuxième étape consiste à mettre en premier la carte \texttt{Justification} s'il y en a une. Enfin, on travaille avec une copie de la main dans laquelle les joker (\texttt{WildVar} et \texttt{WildOp}) sont remplacés par une lettre et un opérateur (ça ne change rien à la syntaxe). Pour retrouver les cartes qui étaient initialement des jokers, j'ai ajouté un attribut \texttt{wild} à la classe \texttt{Card} qui mémorise l'état initial de la carte.
 
-Pour l'instant, l'ordinateur choisit alors un coup au hasard parmi l'ensemble des coups possibles.
+\smallskip
+Pour la gestion de la carte \texttt{Revolution} (qui permet d'échanger deux cartes), j'ai mis bout à bout les quatre prémisses pour pouvoir plus facilement les parcourir avec seulement deux boucles imbriquées. Pour retrouver les coordonnées initiales (sous forme d'un numéro de prémisse et d'un index), j'ai fait une petite fonction \texttt{index\_flat2premise\_index}.
+
+\smallskip
+Si le joueur est sous le coup d'une falsification, il peut soit commencer par jouer une carte \texttt{Justification}, soit jouer une (ou éventuellement deux) carte(s) \texttt{Fallacy} sur un (deux) joueurs. Cette partie étant assez différente du reste, on la traite dans une boucle séparée.
+
+Enfin, on détermine l'ensemble des coups possibles en essayant de jouer chacune des cartes de la main à l'aide de deux boucles imbriquées. Le gestion des cartes spéciales, en particulier celles qui ne se jouent pas dans les prémisses, nécessite l'utilisation d'une variable booléenne \texttt{special1}.
+
+Ces calculs sont réalisés dans la méthode \texttt{coups\_possibles}. Cette méthode est une horreur du point de vue Deep Nesting, mais j'ai eu beau tourner le problème de différentes façons, je n'ai pas réussi à faire plus propre. \footnote{J'espère que Régis Barbanchon, qui nous a fait le cours de PCOO l'an dernier, ne verra pas ça ;-)}
+
+\smallskip
+Ensuite, la classe \texttt{OrdiRandom} concrétise la méthode \texttt{joue} en se chargeant de choisir un coup au hasard. Elle joue effectivement les cartes choisies dans les prémisses, et elle renvoie un message à afficher concernant ce jeu. Le gestion des cartes particulières (\texttt{Fallacy}, \texttt{Justification} et \texttt{Ergo}) qui ne concernent pas directement les prémisses est déléguée à la classe appelante.
 
 \section{Évolutions à venir}
 
 \begin{itemize}
-\item Gérer les cartes spéciales (Ergo, Tabula Rasa, \dots)
+\item Proposer une version chronométrée où le joueur a un temps limité pour jouer.
+\item Ajouter un bouton \texttt{Cheat} qui indique ce qui est prouvé pour l'instant.
+\item Revoir l'esthétique des différents messages, et réécrire la règle du jeu un peu plus précisément. 
 \item Tester d'autres méthodes pour le jeu de l'ordinateur. Il faudrait en particulier attribuer un score à chaque coup en fonction de ce qui est prouvé. Ensuite, j'avais éventuellement pensé à un minimax en testant toutes les cartes qui n'ont pas encore été jouées, mais je pense que ça va faire trop de calculs. Peut-être qu'en faisant quelques parties, une stratégie se présentera\dots Sinon, il restera la solution de faire appel à un ami ?
 \end{itemize}
 
 \appendix
 \begin{a3_landscape}
 \section{Diagramme des classes}
+\vspace*{-1cm}
 \input{"diagramme des classes"}
 \end{a3_landscape}
 \end{document}
