poursuite du rapport

--- a/rapports/rapport.tex
+++ b/rapports/rapport.tex
@@ -95,19 +95,27 @@ Les différentes constantes pouvant être utiles dans plusieurs classes, comme l
 
 \subsection{Les modules concernant les cartes}
 
-Quatre modules sont destinés à gérer les cartes :
 
-\begin{description}
-\item[Card] définit les différentes cartes. Chaque carte a un nom, un niveau de priorité. De nombreuses méthodes permettent de déterminer de quelle carte, ou de qelle famille de carte (lettre, opérateur, joker, \dots) il s'agit. Une méthode permet aussi de \og retourner \fg les parenthèses pour transformer un parenthèse ouvrante en parenthèse fermante et réciproquement. Comme il est parfois nécessaire de comparer deux cartes, la méthode \texttt{\_\_eq\_\_} permet de tester l'égalité de deux cartes (en comparant les noms), ou d'une carte et d'une chaîne de caractères. Les cartes pouvant aussi servir de clé dans un dictionnaire, une fonction de hachage a été implémentée par la méthode \texttt{\_\_hash\_\_}.
-\item[CardList], qui hérite de la classe \texttt{list}, gère les listes de cartes. Elle permet d'ajouter, modifier ou supprimer une carte de la liste. Cette classe permet de déterminer si la liste de carte est syntaxiquement correcte, et dans ce cas d'y associer son écriture en notation polonaise inversée (NPI). Un attribut \texttt{modif} permet de savoir si la liste a été modifiée depuis le dernier calcul de la NPI pour éviter de le refaire inutilement.
-\item[Proof] gère les quatre prémisses. Elle répercute les modifications (ajout, suppression, changement) aux différentes prémisses et gère leur conjonction pour déterminer la NPI associée à la preuve. Elle permet également de savoir si toutes les lettres ont été jouées (pour pouvoir éventuellement jouer une carte Ergo), et le nombre de cartes jouées (pour calculer le score correspondant). Les méthodes \texttt{insert} et \texttt{pop} ont un paramètre supplémentaire qui permet de gérer deux cas différents pour chacune :
+\subsubsection{Card}
+
+La classe \texttt{Card} définit les différentes cartes. Chaque carte a un nom, un niveau de priorité. De nombreuses méthodes permettent de déterminer de quelle carte, ou de qelle famille de carte (lettre, opérateur, joker, \dots) il s'agit. Une méthode permet aussi de \og retourner \fg les parenthèses pour transformer un parenthèse ouvrante en parenthèse fermante et réciproquement. Comme il est parfois nécessaire de comparer deux cartes, la méthode \texttt{\_\_eq\_\_} permet de tester l'égalité de deux cartes (en comparant les noms), ou d'une carte et d'une chaîne de caractères. Les cartes pouvant aussi servir de clé dans un dictionnaire, une fonction de hachage a été implémentée par la méthode \texttt{\_\_hash\_\_}.
+
+\subsubsection{CardList}
+
+La classe \texttt{CardList} hérite de la classe \texttt{list} et gère les listes de cartes. Elle permet d'ajouter, modifier ou supprimer une carte de la liste. Cette classe permet de déterminer si la liste de carte est syntaxiquement correcte, et dans ce cas d'y associer son écriture en notation polonaise inversée (NPI). Un attribut \texttt{modif} permet de savoir si la liste a été modifiée depuis le dernier calcul de la NPI pour éviter de le refaire inutilement.
+
+\subsubsection{Proof}
+
+La classe \texttt{Proof} gère les quatre prémisses. Elle répercute les modifications (ajout, suppression, changement) aux différentes prémisses et gère leur conjonction pour déterminer la NPI associée à la preuve. Elle permet également de savoir si toutes les lettres ont été jouées (pour pouvoir éventuellement jouer une carte Ergo), et le nombre de cartes jouées (pour calculer le score correspondant). Les méthodes \texttt{insert} et \texttt{pop} ont un paramètre supplémentaire qui permet de gérer deux cas différents pour chacune :
 \begin{itemize}
 \item l'ajout peut provenir soit d'une nouvelle carte jouée par le joueur soit de l'annulation d'une carte Tabula Rasa qui doit être gérée différemment.
 \item De même , la suppression peut soit correspondre à une carte qui vient d'être jouée, soit au jeu d'une carte Tabula Rasa.
 \end{itemize}
-Pour pouvoir gérer ces différents cas, on maintient une liste \texttt{currently\_added} des numéro de prémisse et index des cartes qui peuvent être modifiées, ainsi qu'un booléen indiquant si la carte correspond à un jeu \og classique \fg (une carte qui vient d'être jouée et qui peut être retirée) ou au jeu d'une carte Tabula Rasa (carte qui a été supprimée par un Tabula Rasa et qui peut être remise). Les indices de cette liste doivent être actualisés à chaque ajout ou suppression de cartes dans les prémisses pour suivre les modifications. Par exemple, si une carte est ajoutée avant une carte mémorisée, l'indice de cette dernière doit être augmenté de 1.
-\item[Deck] gère le paquet de cartes.
-\end{description}
+Pour pouvoir gérer ces différents cas, on maintient une liste \texttt{currently\_added} des numéro de prémisse et index des cartes qui peuvent être modifiées, ainsi qu'un booléen indiquant si la carte correspond à un jeu \og classique \fg (une carte qui vient d'être jouée et qui peut être retirée) ou au jeu d'une carte Tabula Rasa (carte qui a été supprimée par un Tabula Rasa et qui peut être remise). Les indices de cette liste doivent être actualisés à chaque ajout ou suppression de cartes dans les prémisses pour suivre les modifications. Par exemple, si une carte est ajoutée avant une carte mémorisée, l'indice de cette dernière doit être augmenté de 1 pour refléter sa nouvelle position dans la prémisse.
+
+\subsubsection{Deck}
+
+La classe \texttt{Deck} hérite de \texttt{list} et gère le paquet de cartes. Elle permet de tirer un certain nombre de cartes du paquet (cinq en début de partie, et deux au début de chaque tour). Les méthodes \texttt{append} et \texttt{pop} permettent de gérer les cartes supprimées par un Tabula Rasa qui doivent être remises à la fin du paquet. La méthode \texttt{is\_finished} permet de savoir si le paquet est terminé, pour le cas échéant mettre fin au tour.
 
 \subsection{Les modules concernant les démonstrations}
 
